# smpl-blockchain-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
assets/artwork.pxd/: metadata.info
assets/artwork.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
assets/artwork.pxd/data/: 0D742712-F3D8-473B-BA5C-261B215532CB  E7C61A0B-947E-4C6A-90A0-467DC777265D
src/: block.rs  blockchain.rs  lib.rs  main.rs  transaction.rs
