[package]
name = "smpl-blockchain-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sasha Prokhorenko <warbles.lieu_04@icloud.com>"]
repository = "https://github.com/minikin/smpl-blockchain-rs"
readme = "README.md"
exclude = ["assets"]

[lib]
name = "blockchain"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
